<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cartelera</string>
    <string name="action_buscar">Buscar Aula</string>
      <string name="action_noticias">Noticias</string>
      <string name="action_radio">Radio</string>
      <string name="action_sedes">Sedes</string>
     <string name="action_about">Acerca de</string>
     <string name="Seleccione_carrera">Seleccione Carrera</string>
     <string name="Buscar_materias">Buscar materias</string>
     <string name="about">Cartelera UNDAV\n\nCreado por:\nDíaz, Sebastián\nLoza, Eric\nManka, Patricio\n</string>
    <string name="aula">Consultar Aula</string>
    <string name="noticia">Noticias Undav</string>
    <string name="radio">Radio Undav</string>
    <string name="sede">Sedes Undav</string>
    <string name="seleccione_materia">Seleccione Materia</string>
    <string name="seleccione_turno">Seleccione Turno</string>
    <string name="consultar_comision">Consultar comision</string>
    <string name="columna_comision">Nro. Com.</string>
    <string name="columna_dia">Dias</string>
        <string name="columna_aula">Nro. Aula</string>
        <string name="columna_hora_inicio">Hr. Inicio</string>
    <string name="columna_hora_fin">Hr. Fin</string>
            <string name="llamar_radio">Llamar</string>
    <string name="play_radio">Reproducir/Pausar</string>
                <string name="llamar_sede">Llamar</string>
    <string name="ver_mapa">Ver en Google Maps</string>
</resources>
