<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.undav.cartelera.MainActivity" >

    <item
        android:id="@+id/action_buscar"
        android:title="@string/action_buscar"
        app:showAsAction="never"/>

    <item android:id="@+id/action_noticias"
          android:title="@string/action_noticias"
          app:showAsAction="never"/>
    <item
        android:id="@+id/action_radio"
        android:title="@string/action_radio"
        app:showAsAction="never"/>
    
        <item
        android:id="@+id/action_sedes"
        android:title="@string/action_sedes"
        app:showAsAction="never"/>

    <item android:id="@+id/action_about"
          android:title="@string/action_about"
          app:showAsAction="never"/>

</menu>
